--- a/index.html
+++ b/index.html
@@ -39,6 +39,20 @@
             </ul>
         </div>
     </nav>
+    <section class="fluid-container px-0">
+        <div class="row align-items-center">
+            <div class="col-lg-6">
+                <div class="text-white text-center d-none d-lg-block">
+                    <h2 class="">MUSEUM OF CANDY</h2>
+                    <h2 class="">MUSEUM OF CANDY</h2>
+                    <h2 class="">MUSEUM OF CANDY</h2>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <img class="img-fluid" src="imgs/hand2.png" alt="" srcset="">
+            </div>
+        </div>
+    </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
