--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
     <section class="fluid-container px-0">
         <div class="row align-items-center">
             <div class="col-lg-6">
-                <div class="text-white text-center d-none d-lg-block">
-                    <h2 class="">MUSEUM OF CANDY</h2>
-                    <h2 class="">MUSEUM OF CANDY</h2>
-                    <h2 class="">MUSEUM OF CANDY</h2>
+                <div id="headingGroup" class="text-white text-center d-none d-lg-block m-5">
+                    <h1 class="">MUSEUM OF CANDY</h1>
+                    <h1 class="">MUSEUM OF CANDY</h1>
+                    <h1 class="">MUSEUM OF CANDY</h1>
+
                 </div>
             </div>
             <div class="col-lg-6">
