--- a/index.html
+++ b/index.html
@@ -39,18 +39,54 @@
             </ul>
         </div>
     </nav>
-    <section class="fluid-container px-0">
+    <section class="container-fluid px-0">
         <div class="row align-items-center">
             <div class="col-lg-6">
                 <div id="headingGroup" class="text-white text-center d-none d-lg-block m-5">
                     <h1 class="">MUSEUM OF CANDY</h1>
                     <h1 class="">MUSEUM OF CANDY</h1>
                     <h1 class="">MUSEUM OF CANDY</h1>
-
                 </div>
             </div>
             <div class="col-lg-6">
-                <img class="img-fluid" src="imgs/hand2.png" alt="" srcset="">
+                <img class="img-fluid" src="imgs/hand2.png" alt="">
+            </div>
+        </div>
+    </section>
+
+    <section class="container-fluid px-0">
+        <div class="row align-items-center content">
+            <div class="col-md-6 order-2 order-md-1">
+                <img class="img-fluid" src="imgs/milk.png" alt="">
+            </div>
+            <div class="col-md-6 text-center order-1 order-md-2">
+                <div class="row justify-content-center">
+                    <div class="col-10 col-8-lg-8 blurb">
+                        <h2>MUSEUM OF CANDY</h2>
+                        <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, voluptatibus
+                            voluptates nulla illo ipsam esse tempore tenetur suscipit unde molestiae cupiditate eaque
+                            vel modi
+                            ratione nemo quia! Harum, neque perspiciatis.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row align-items-center content">
+            <div class="col-md-6 order-2 order-md-1">
+                <img class="img-fluid" src="imgs/milk.png" alt="">
+            </div>
+            <div class="col-md-6 text-center order-1 order-md-2">
+                <div class="row justify-content-center">
+                    <div class="col-10 col-8-lg-8 blurb">
+                        <h2>MUSEUM OF CANDY</h2>
+                        <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, voluptatibus
+                            voluptates nulla illo ipsam esse tempore tenetur suscipit unde molestiae cupiditate eaque
+                            vel modi
+                            ratione nemo quia! Harum, neque perspiciatis.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
