--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
 
     <section class="container-fluid px-0">
         <div class="row align-items-center content">
-            <div class="col-md-6 order-2 order-md-1">
+            <div class="col-md-6 text-center order-2 order-md-1">
                 <img class="img-fluid" src="imgs/milk.png" alt="">
             </div>
             <div class="col-md-6 text-center order-1 order-md-2">
                 <div class="row justify-content-center">
-                    <div class="col-10 col-8-lg-8 blurb">
+                    <div class="col-10 col-lg-8 blurb">
                         <h2>MUSEUM OF CANDY</h2>
                         <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
                         <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, voluptatibus
@@ -73,12 +73,30 @@
             </div>
         </div>
         <div class="row align-items-center content">
-            <div class="col-md-6 order-2 order-md-1">
-                <img class="img-fluid" src="imgs/milk.png" alt="">
+            <div class="col-md-6 text-center">
+                <div class="row justify-content-center">
+                    <div class="col-10 col-lg-8 blurb">
+                        <h2>MUSEUM OF CANDY</h2>
+                        <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, voluptatibus
+                            voluptates nulla illo ipsam esse tempore tenetur suscipit unde molestiae cupiditate eaque
+                            vel modi
+                            ratione nemo quia! Harum, neque perspiciatis.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <img class="img-fluid" src="imgs/gumball.png" alt="">
+            </div>
+        </div>
+
+        <div class="row align-items-center content">
+            <div class="col-md-6 text-center order-2 order-md-1">
+                <img class="img-fluid" src="imgs/sprinkles.png" alt="">
             </div>
             <div class="col-md-6 text-center order-1 order-md-2">
                 <div class="row justify-content-center">
-                    <div class="col-10 col-8-lg-8 blurb">
+                    <div class="col-10 col-lg-8 blurb">
                         <h2>MUSEUM OF CANDY</h2>
                         <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
                         <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, voluptatibus
@@ -89,6 +107,9 @@
                 </div>
             </div>
         </div>
+
+
+
     </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
