--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
             <div class="col-md-6 text-center order-1 order-md-2">
                 <div class="row justify-content-center">
-                    <div class="col-10 col-lg-8 blurb">
+                    <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
                         <h2>MUSEUM OF CANDY</h2>
                         <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
                         <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, voluptatibus
@@ -75,7 +75,7 @@
         <div class="row align-items-center content">
             <div class="col-md-6 text-center">
                 <div class="row justify-content-center">
-                    <div class="col-10 col-lg-8 blurb">
+                    <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
                         <h2>MUSEUM OF CANDY</h2>
                         <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
                         <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, voluptatibus
@@ -96,7 +96,7 @@
             </div>
             <div class="col-md-6 text-center order-1 order-md-2">
                 <div class="row justify-content-center">
-                    <div class="col-10 col-lg-8 blurb">
+                    <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
                         <h2>MUSEUM OF CANDY</h2>
                         <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
                         <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, voluptatibus
@@ -124,7 +124,14 @@
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
 
-
+    <script>
+        $(function () {
+            $(document).scroll(function () {
+                var $nav = $("#mainNavbar");
+                $nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
+            });
+        });
+    </script>
 </body>
 
 </html>
